--- a/list-a-grave.html
+++ b/list-a-grave.html
@@ -21,7 +21,7 @@
         <p>Fill out this form. A human (yes, really) will review it and add your project to the graveyard.</p>
 
         <!-- FORMSUBMIT CODE - REPLACE THE EMAIL ADDRESS -->
-        <form action="https://formsubmit.co/YOUR-EMAIL@DOMAIN.COM" method="POST">
+        <form action="https://formsubmit.co/timothe.bacher@gmail.com" method="POST">
             <!-- FormSubmit Config -->
             <input type="hidden" name="_subject" value="New Grave Submission!">
             <input type="hidden" name="_template" value="table">
