--- a/index.html
+++ b/index.html
@@ -438,12 +438,12 @@
 
         // Firebase configuration - REPLACE WITH YOUR CONFIG
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "your-project.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyA28dAKeUday_3OZ32af_Xzg-cSX5qbopY",
+            authDomain: "saas-graveyard.firebaseapp.com",
+            projectId: "saas-graveyard",
+            storageBucket: "saas-graveyard.firebasestorage.app",
+            messagingSenderId: "750220753010",
+            appId: "1:750220753010:web:9ed594478086feef3faaeb"
         };
 
         // Update status indicators
